--- a/config/services.yaml
+++ b/config/services.yaml
@@ -19,3 +19,7 @@ services:
             - { name: contao.callback, table: tl_files, target: config.onload, method: adjustDataContainer }
             - { name: contao.callback, table: tl_image_size_item, target: fields.alternative.options, method: alternativeOptionsCallback }
             - { name: contao.callback, table: tl_image_size_item, target: list.sorting.child_record, method: imageSizeItemChildRecordCallback }
+
+    contao_image_alternatives.data_container.important_parts:
+        class: InspiredMinds\ContaoImageAlternatives\EventListener\DataContainer\ImportantPartsListener
+        autoconfigure: true
