implement actual important parts

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@ services:
         decorates: contao.image.picture_factory
         arguments:
             - '@contao_image_alternatives.image.picture_factory.inner'
+            - '@contao.image.image_factory'
             - '%contao_image_alternatives.alternative_sizes%'
             - '%contao_image_alternatives.predefined_sizes%'
             - '%kernel.project_dir%'
