--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@ services:
         decorates: contao.image.picture_factory
         arguments:
             - '@contao_image_alternatives.image.picture_factory.inner'
+            - '@contao.image.image_factory'
             - '%contao_image_alternatives.alternative_sizes%'
             - '%contao_image_alternatives.predefined_sizes%'
             - '%kernel.project_dir%'
@@ -19,3 +20,10 @@ services:
             - { name: contao.callback, table: tl_files, target: config.onload, method: adjustDataContainer }
             - { name: contao.callback, table: tl_image_size_item, target: fields.alternative.options, method: alternativeOptionsCallback }
             - { name: contao.callback, table: tl_image_size_item, target: list.sorting.child_record, method: imageSizeItemChildRecordCallback }
+
+    contao_image_alternatives.data_container.important_parts:
+        class: InspiredMinds\ContaoImageAlternatives\EventListener\DataContainer\ImportantPartsListener
+        autoconfigure: true
+        arguments:
+            - '@request_stack'
+            - '%kernel.project_dir%'
