--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,10 +1,13 @@
 services:
+    _defaults:
+        autoconfigure: true
+
     contao_image_alternatives.image.picture_factory:
         class: InspiredMinds\ContaoImageAlternatives\Image\PictureFactory
         decorates: contao.image.picture_factory
         arguments:
             - '@contao_image_alternatives.image.picture_factory.inner'
-            - '@contao.image.image_factory'
+            - '@contao.image.factory'
             - '@contao.image.resizer'
             - '%contao_image_alternatives.alternative_sizes%'
             - '%contao_image_alternatives.predefined_sizes%'
@@ -17,14 +20,14 @@ services:
             - '@translator'
             - '%contao_image_alternatives.alternatives%'
             - '%kernel.project_dir%'
-        tags:
-            - { name: contao.callback, table: tl_files, target: config.onload, method: adjustDataContainer }
-            - { name: contao.callback, table: tl_image_size_item, target: fields.alternative.options, method: alternativeOptionsCallback }
-            - { name: contao.callback, table: tl_image_size_item, target: list.sorting.child_record, method: imageSizeItemChildRecordCallback }
+            - '%contao.image.valid_extensions%'
 
     contao_image_alternatives.data_container.important_parts:
         class: InspiredMinds\ContaoImageAlternatives\EventListener\DataContainer\ImportantPartsListener
-        autoconfigure: true
         arguments:
             - '@request_stack'
             - '%kernel.project_dir%'
+            - '%contao.image.valid_extensions%'
+
+    InspiredMinds\ContaoImageAlternatives\EventListener\AddBackendAssetsListener:
+        autowire: true
